--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,10 +7,12 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
+    "chart.js": "^2.9.3",
     "jquery": "^3.4.1",
     "popper": "^1.0.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.12.0",
     "react-particles-js": "^2.7.1",
     "react-scripts": "3.4.0",
