--- a/backend/package.json
+++ b/backend/package.json
@@ -15,5 +15,8 @@
     "jade": "~1.11.0",
     "mongoose": "^5.9.1",
     "morgan": "~1.9.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
