--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -13,8 +14,10 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "moment": "^2.24.0",
     "mongoose": "^5.9.1",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "plaid": "^4.8.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
