--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,15 @@
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
     "jquery": "^3.4.1",
+    "mdbreact": "^4.25.3",
+    "moment": "^2.24.0",
     "plaid": "^4.8.0",
     "popper": "^1.0.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.12.0",
+    "react-moment": "^0.9.7",
     "react-particles-js": "^2.7.1",
     "react-plaid-link": "^1.5.1",
     "react-scripts": "3.4.0",
