--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "popper": "^1.0.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-calendar": "^3.0.0",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.12.0",
     "react-moment": "^0.9.7",
